fix formatSearchString, entity case insensitive search by text fields, add create annotations from glagol library